--- a/src/app/ApplicationsListDept/applications-list-dept-dialog/applications-list-dept-dialog.component.html
+++ b/src/app/ApplicationsListDept/applications-list-dept-dialog/applications-list-dept-dialog.component.html
@@ -9,7 +9,7 @@
 
     <mat-form-field appearance="fill" class="full-width">
       <mat-label>שם המערכת</mat-label>
-      <input matInput formControlName="AppName" required>
+      <input matInput formControlName="appName" required>
     </mat-form-field>
 
     <mat-form-field appearance="fill" class="full-width">
