--- a/src/app/doctor-authorizations/doctor-authorizations.component.html
+++ b/src/app/doctor-authorizations/doctor-authorizations.component.html
@@ -1,25 +1,27 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
-<div class="body">
+<!-- quick styles for wrapping & layout (can move to .scss if you prefer) -->
 
 
-  
-  <form [formGroup]="filterForm" dir="rtl" class="filter-form">
+<div class="body" dir="rtl">
+  <form [formGroup]="filterForm" class="filter-form">
     <div class="container-fluid mb-2">
       <div class="row search-count">
         <div class="col">
-          <div dir="rtl" class="card">
-            <div dir="rtl" class="card-body">
-              <ng-container *ngFor="let column of columns; let i = index">
+          <div class="card" dir="rtl">
+            <div class="card-body" dir="rtl">
+              <!-- Render only the filters you list in filterFields -->
+              <ng-container *ngFor="let column of filterFields; let i = index">
                 <div class="filter-row" *ngIf="i % 4 === 0"></div>
 
                 <!-- Department with autocomplete -->
                 <mat-form-field class="filter-field" *ngIf="column === 'departnentDescripton'">
                   <mat-label class="filters">{{ getColumnLabel(column) }}</mat-label>
-                  <input type="text"
-                         matInput
-                         [formControl]="$any(getFormControl(column))"
-                         [matAutocomplete]="deptAuto" />
+                  <input
+                    type="text"
+                    matInput
+                    [formControl]="$any(getFormControl(column))"
+                    [matAutocomplete]="deptAuto" />
                   <mat-autocomplete #deptAuto="matAutocomplete">
                     <mat-option *ngFor="let opt of filteredResponsibilities | async" [value]="opt">
                       {{ opt }}
@@ -36,8 +38,13 @@
             </div>
 
             <div class="reset-button-container">
-              <button mat-button (click)="resetFilters()" mat-raised-button color="primary"
-                      class="custom-button" matTooltip="Reset Filters">
+              <button
+                mat-button
+                (click)="resetFilters()"
+                mat-raised-button
+                color="primary"
+                class="custom-button"
+                matTooltip="איפוס מסננים">
                 <i class="material-icons">refresh</i>
               </button>
             </div>
@@ -46,85 +53,85 @@
       </div>
     </div>
 
-    <div dir="rtl" style="display:flex; justify-content:space-between; align-items:center">
-      <mat-form-field class="long-search-bar" style="flex:1; padding-right:10px">
-        <mat-label class="filters" style="color: blue"> חיפוש</mat-label>
+    <div style="display:flex; justify-content:space-between; align-items:center">
+      <mat-form-field class="long-search-bar" style="flex:1; padding-inline-start:10px">
+        <mat-label class="filters" style="color: blue">חיפוש</mat-label>
         <input matInput [formControlName]="'globalFilter'" class="search-input" />
       </mat-form-field>
 
-      
-      <div class="icon" matTooltip="Download Excel">
-        <img src="../../assets/excel.png" alt="Download"
-             (click)="exportToExcel()" class="download-icon" width="50px" />
+      <div class="icon" matTooltip="הורד לאקסל">
+        <img
+          src="../../assets/excel.png"
+          alt="Download"
+          (click)="exportToExcel()"
+          class="download-icon"
+          width="50" />
       </div>
     </div>
   </form>
 
   <!-- table -->
-  <mat-table *ngIf="!showGraph"
-  [dataSource]="matTableDataSource"
-  matSort dir="rtl"
-  class="mat-elevation-z8">
+  <mat-table
+    *ngIf="!showGraph"
+    [dataSource]="matTableDataSource"
+    matSort
+    dir="rtl"
+    class="mat-elevation-z8 w-wrap">
 
-<!-- Generic columns (everything EXCEPT 'link') -->
-<ng-container *ngFor="let column of columns">
-<ng-container *ngIf="column !== 'link'" [matColumnDef]="column">
-<mat-header-cell *matHeaderCellDef mat-sort-header>
-{{ getColumnLabel(column) }}
-</mat-header-cell>
-<mat-cell *matCellDef="let element">
-{{ element[column] }}
-</mat-cell>
-</ng-container>
-</ng-container>
+    <!-- Dynamic columns (handle dates specially, link as actions) -->
+    <ng-container *ngFor="let column of columns" [matColumnDef]="column">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ getColumnLabel(column) }}
+      </mat-header-cell>
 
-<!-- Dedicated 'link' column as a button -->
-<!-- <ng-container matColumnDef="link">
-<mat-header-cell *matHeaderCellDef mat-sort-header>
-{{ getColumnLabel('link') }}
-</mat-header-cell>
-<mat-cell *matCellDef="let element">
-<button mat-stroked-button color="primary"
-     class="press-link-btn"
-     [disabled]="!element?.link"
-     matTooltip="Open link"
-     (click)="openLink(element?.link)">
-<mat-icon style="margin-inline-end:6px;">open_in_new</mat-icon>
-קישור
-</button>
-</mat-cell>
-</ng-container> -->
-<!-- Dedicated 'link' column with actions -->
-<ng-container matColumnDef="link">
-  <mat-header-cell *matHeaderCellDef mat-sort-header>
-    {{ getColumnLabel('link') }}
-  </mat-header-cell>
+      <mat-cell *matCellDef="let element" [ngSwitch]="column" class="wrap">
+        <!-- Special: link column with actions -->
+        <ng-container *ngSwitchCase="'link'">
+          <div class="link-actions">
+            <button
+              mat-stroked-button
+              color="primary"
+              class="press-link-btn"
+              [disabled]="!(element?.link || element?.cellNumber)"
+              matTooltip="פתח קישור"
+              (click)="openPerm(element)">
+              <mat-icon style="margin-inline-end:6px;">open_in_new</mat-icon>
+              קישור
+            </button>
 
-  <mat-cell *matCellDef="let element" class="link-actions">
-    <button mat-stroked-button color="primary"
-            class="press-link-btn"
-            [disabled]="!(element?.link || element?.cellNumber)"
-            matTooltip="פתח קישור"
-            (click)="openPerm(element)">
-      <mat-icon style="margin-inline-end:6px;">open_in_new</mat-icon>
-      קישור
-    </button>
+            <button
+              mat-icon-button
+              class="pdf-btn"
+              [disabled]="!(element?.link || element?.cellNumber)"
+              matTooltip="הורד PDF של הדף"
+              (click)="downloadPermPdf(element)"
+              aria-label="הורד PDF">
+              <img src="assets/PDF.jfif" class="pdf-icon" alt="PDF" draggable="false" />
+            </button>
+          </div>
+        </ng-container>
 
-    <button mat-icon-button
-    class="pdf-btn"
-    [disabled]="!(element?.link || element?.cellNumber)"
-    matTooltip="הורד PDF של הדף"
-    (click)="downloadPermPdf(element)"
-    aria-label="הורד PDF">
-<img src="assets/PDF.jfif" class="pdf-icon" alt="PDF" draggable="false" />
-</button>
-  </mat-cell>
-</ng-container>
+        <!-- Special: date columns formatted nicely -->
+        <ng-container *ngSwitchCase="'doctorSignDateTime'">
+          {{ element?.doctorSignDateTime | date:'dd/MM/yyyy HH:mm' }}
+        </ng-container>
+        <ng-container *ngSwitchCase="'directManagerSignDateTime'">
+          {{ element?.directManagerSignDateTime | date:'dd/MM/yyyy HH:mm' }}
+        </ng-container>
+        <ng-container *ngSwitchCase="'headManagerSignDateTime'">
+          {{ element?.headManagerSignDateTime | date:'dd/MM/yyyy HH:mm' }}
+        </ng-container>
 
-<mat-header-row *matHeaderRowDef="columns"></mat-header-row>
-<mat-row *matRowDef="let row; columns: columns" class="mat-row"></mat-row>
-</mat-table>
+        <!-- Default cell: show raw value, allow wrapping -->
+        <ng-container *ngSwitchDefault>
+          {{ element[column] }}
+        </ng-container>
+      </mat-cell>
+    </ng-container>
 
+    <mat-header-row *matHeaderRowDef="columns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: columns" class="mat-row"></mat-row>
+  </mat-table>
 
   <mat-paginator
     [length]="matTableDataSource.data.length"
@@ -132,4 +139,3 @@
     [pageSizeOptions]="[5, 50, 100]">
   </mat-paginator>
 </div>
-
