--- a/src/app/chameleon-reports/breastfeeding-coordinator/breastfeeding-coordinator.component.html
+++ b/src/app/chameleon-reports/breastfeeding-coordinator/breastfeeding-coordinator.component.html
@@ -1,6 +1,26 @@
 <app-spinner [isLoading]="isLoading"></app-spinner>
 <div class="body">
   <mat-card class="filters-gauge-container" dir="rtl" *ngIf="!isLoading">
+
+    <!-- 🟧 24h Gauge -->
+<div class="gauge-wrapper">
+  <ngx-gauge
+    [size]="220"
+    [type]="'semi'"
+    [value]="validPercLast24"
+    [label]="'אחוז תקין - 24 שעות אחרונות'"
+    [append]="'%'"
+    [thick]="15"
+    [foregroundColor]="getLast24GaugeColor()"
+    [backgroundColor]="'#e0e0e0'">
+  </ngx-gauge>
+  <div class="gauge-details">
+    <p>סה״כ מקרים: {{ last24Total }}</p>
+    <p>מקרים תקינים: {{ last24Valid }}</p>
+    <p>לא תקינים: {{ last24NotValid }}</p>
+  </div>
+</div>
+
     <!-- 🟩 Monthly Gauge -->
     <div class="gauge-wrapper">
       <ngx-gauge
@@ -42,6 +62,79 @@
 
   <!-- ✅ Tab group must always render -->
   <mat-tab-group dir="rtl" *ngIf="!isLoading">
+
+    <!-- 🟧 Tab: ייעוצים ב־24 שעות אחרונות -->
+<mat-tab label="ייעוצים ב־24 שעות אחרונות">
+  <ng-container *ngIf="!isLoading">
+    <mat-card class="monthly-table-card" dir="rtl">
+      <!-- Filter: בוצע בזמן -->
+<mat-card class="filter-card" dir="rtl" style="margin-bottom:8px">
+  <mat-radio-group
+    [value]="onTime24Filter"
+    (change)="onTime24Filter = $event.value; applyLast24Filter()">
+    <mat-radio-button value="all">הכל</mat-radio-button>
+    <mat-radio-button value="yes">כן</mat-radio-button>
+    <mat-radio-button value="no">לא</mat-radio-button>
+  </mat-radio-group>
+</mat-card>
+
+      <table
+        mat-table
+        [dataSource]="last24DataSource"
+        matSort
+        #last24Sort="matSort"
+        class="mat-elevation-z8">
+
+        <ng-container matColumnDef="admission_No">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>מספר אשפוז</th>
+          <td mat-cell *matCellDef="let row">{{ row.admission_No }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="first_Name">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>שם פרטי</th>
+          <td mat-cell *matCellDef="let row">{{ row.first_Name }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="last_Name">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>שם משפחה</th>
+          <td mat-cell *matCellDef="let row">{{ row.last_Name }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="birthDate">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>תאריך/שעת לידה</th>
+          <td mat-cell *matCellDef="let row">{{ row.birthDate }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="timeConseltation">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>תאריך/שעת ייעוץ</th>
+          <td mat-cell *matCellDef="let row">
+            {{ row.timeConseltation ? (row.timeConseltation | date:'dd/MM/yyyy HH:mm') : '' }}
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="onTimeFirstConseltation">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header>בוצע בזמן</th>
+          <td mat-cell *matCellDef="let row">
+            {{ row.onTimeFirstConseltation ? 'כן' : 'לא' }}
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="last24DisplayedColumns"></tr>
+        <tr
+        mat-row
+        *matRowDef="let row; columns: last24DisplayedColumns;"
+        [ngClass]="row.onTimeFirstConseltation ? 'row-green' : 'row-red'">
+      </tr>      </table>
+
+      <mat-paginator
+        #last24Paginator
+        [pageSize]="10"
+        [pageSizeOptions]="[5, 10, 20, 50]"
+        showFirstLastButtons>
+      </mat-paginator>
+    </mat-card>
+  </ng-container>
+</mat-tab>
 
     <!-- 🟦 Tab 1 -->
     <mat-tab label="מאושפזות ללא ייעוץ">
