--- a/src/app/chameleon-reports/productivity-reports/productivity-reports.component.html
+++ b/src/app/chameleon-reports/productivity-reports/productivity-reports.component.html
@@ -8,7 +8,12 @@
           <p>צפייה בדוח ריפוי בעיסוק</p>
         </mat-card-content>
       </mat-card>
-  
+      <mat-card class="report-card" routerLink="/Psychology">
+        <mat-card-content>
+          <h2>פסיכולוגיה</h2>
+          <p>צפייה בדוח פסיכולוגיה</p>
+        </mat-card-content>
+      </mat-card>
       <mat-card class="report-card" routerLink="/Physiotherapy">
         <mat-card-content>
           <h2>פיזיותרפיה</h2>
